[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "0.9", features = ["soroban-env-macros/wasm"] }

[dev-dependencies]
soroban-sdk = { version = "0.9", features = ["soroban-env-macros/wasm", "testutils"] }

[features]
default = []
soroban-env-macros/wasm = ["soroban-sdk"]